--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
         <div>
           <h1>福本 誠</h1>
-            <p>プログラミング学習中の料理人です...</p>
+            <p>プログラミング学習中の料理人です</p>
               <ul>
                 <li>
                   <a href="#">
