--- a/index.html
+++ b/index.html
@@ -50,13 +50,18 @@
     <div class="container">
       <h1>WORKS</h1>
         <section>
-          <img
-            src="img/work1.png"
-            alt="勇者"
-            width="400"
-            height="225">
-          <h2>勇者</h2>
-            <p>あああああああああああああああああああああ</p>
+          <a 
+            href="https://fukumak.github.io/myapp/"
+            target="_blank">
+            <img
+              src="img/myapp.jpg"
+              alt="アプリ紹介ページ"
+              width="400"
+              height="225"
+              >
+          </a>
+            <h2>アプリ紹介ページ</h2>
+              <p>お手本を見ながら作成した<br>アプリ紹介ページです。</p>
         </section>
         <section>
           <img
